# camkes-tool

./: CMakeLists.txt  camkes-top-level.cmake
camkes/ast/: __init__.py  base.py  liftedast.py  objects.py
camkes/internal/: frozendict.py  hash.py
camkes/parser/: camkes.g  stage3.py
camkes/runner/: Context.py  __main__.py
camkes/templates/: camkes-gen.cmake  cantripIRQ.template.rs  cantripMMIO.template.rs  cantripRPCCall-from.template.rs  cantripRPCCall-to.template.rs  cantripRPCCallSignal-from.template.rs  cantripRPCCallSignal-to.template.rs  cantripRPCOverMultiSharedData-from.template.rs  cantripRPCOverMultiSharedData-to.template.rs  cantripRPCSignalOverMultiSharedData-from.template.rs  cantripRPCSignalOverMultiSharedData-to.template.rs  cantripSharedData.template.rs  component.cantripos.c  component.common.c  component.common.rs  component.fini.rs  component.kataos.c  macros.py  rpc-connector-common-to.c  rpc-connector.c  templates.cmake
camkes/templates/helpers/: marshal.c
camkes/visualCAmkES/: testvisualcamkes.py
camkes/visualCAmkES/Controller/: graph_controller.py
camkes/visualCAmkES/View/: Connection_Property_Widget.py  Connection_Widget.py  Graph_Widget.py  Instance_Property_Widget.py  Instance_Widget.py  __init__.py
include/builtin/: std_connector.camkes
libcantripcamkes/: CMakeLists.txt
libcantripcamkes/arch_include/aarch64/: _arch_defs.h
libcantripcamkes/arch_include/arm/: _arch_defs.h
libcantripcamkes/arch_include/riscv/: _arch_defs.h
libcantripcamkes/include/: _types.h  assert.h  ctype.h  errno.h  fcntl.h  inttypes.h  limits.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h
libcantripcamkes/include/bits/: syscall.h
libcantripcamkes/include/platsupport/plat/: serial.h
libcantripcamkes/include/sys/: mman.h  resource.h  time.h  types.h
libcantripcamkes/src/: libc_exit.c  libc_math.c  libc_misc.c  libc_stdio.c  libc_string.c  stubs.c
libsel4camkes/: CMakeLists.txt
libsel4camkes/include/camkes/: marshal_macros.h
libsel4camkes/src/: start.c
tools/: check_deps.py
tools/python-deps/: setup.py
